# Sarathi-Digital-Astrology-Jyotish

./: .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.js  .prettierignore  ARCHITECTURE.md  CODE_QUALITY.md  CONTRIBUTING.md  DEPLOYMENT.md  PRODUCTION-COMMANDS.sh  QUICKSTART_PAYMENTS.md  README.md  SETUP_QUALITY_CHECKS.md  VERCEL_DEPLOYMENT_GUIDE.md  download_posters.py  download_posters.sh  find_unused.js  find_unused_apis.js  i18n.ts  middleware.ts  next.config.js  package.json  prisma.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
_archived/services/astro-core-python/: Procfile  pyproject.toml  railway.toml  requirements.txt  router.py  setup.sh  test_request.json  test_validation.py
_archived/services/astro-core-python/astro_core_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_archived/services/astro-core-python/freeastrology/: __init__.py  client.py  config.py  main.py  models.py  translator.py
_archived/services/astro-core-python/internal/: __init__.py  houses.py  nakshatras.py  planetary.py  routes.py  signs.py
app/: apple-icon.tsx  error.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  sitemap.ts
components/: error-boundary.tsx
docs/: ESLINT_PRISMA_COMPAT.md  MONITORING.md  PRISMA_CONFIG.md  SECURITY.md  TESTING.md
hooks/: use-supabase-auth.test.ts  use-supabase-auth.ts  use-supabase.ts  use-user-plan.ts  useRecentlyViewedCharts.ts  useSavedCharts.ts
lib/: env.ts  festivals.ts  index.ts  rate-limit.ts  utils.ts  validation.ts
(+399 files in other folders)
